.archive/kube/deploy/apps/blocky/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app blocky
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts: &dns
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            - port: "8053"
              protocol: UDP
            - port: "8053"
              protocol: TCP
  egress:
    - toCIDRSet:
        - cidr: "${IP_ROUTER_LAN}/32"
        - cidr: "194.242.2.0/24" # Mullvad
      toPorts: *dns
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dns
